sdk/containerservice/arm-containerservice/samples/v18/typescript/README.md
# client library samples for TypeScript

These sample programs show how to use the TypeScript client libraries for in some common scenarios.

| **File Name**                                                                                                                     | **Description**                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                |
| --------------------------------------------------------------------------------------------------------------------------------- | ---------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
| [agentPoolsAbortLatestOperationSample.ts][agentpoolsabortlatestoperationsample]                                                   | Aborts the currently running operation on the agent pool. The Agent Pool will be moved to a Canceling state and eventually to a Canceled state when cancellation finishes. If the operation completes before cancellation can take place, a 409 error code is returned. x-ms-original-file: specification/containerservice/resource-manager/Microsoft.ContainerService/aks/stable/2023-03-01/examples/AgentPoolsAbortOperation.json                                                                                                            |
| [agentPoolsCreateOrUpdateSample.ts][agentpoolscreateorupdatesample]                                                               | Creates or updates an agent pool in the specified managed cluster. x-ms-original-file: specification/containerservice/resource-manager/Microsoft.ContainerService/aks/stable/2023-03-01/examples/AgentPoolsCreate_Snapshot.json                                                                                                                                                                                                                                                                                                                |
| [agentPoolsDeleteSample.ts][agentpoolsdeletesample]                                                                               | Deletes an agent pool in the specified managed cluster. x-ms-original-file: specification/containerservice/resource-manager/Microsoft.ContainerService/aks/stable/2023-03-01/examples/AgentPoolsDelete.json                                                                                                                                                                                                                                                                                                                                    |
| [agentPoolsGetAvailableAgentPoolVersionsSample.ts][agentpoolsgetavailableagentpoolversionssample]                                 | See [supported Kubernetes versions](https://docs.microsoft.com/azure/aks/supported-kubernetes-versions) for more details about the version lifecycle. x-ms-original-file: specification/containerservice/resource-manager/Microsoft.ContainerService/aks/stable/2023-03-01/examples/AgentPoolsGetAgentPoolAvailableVersions.json                                                                                                                                                                                                               |
| [agentPoolsGetSample.ts][agentpoolsgetsample]                                                                                     | Gets the specified managed cluster agent pool. x-ms-original-file: specification/containerservice/resource-manager/Microsoft.ContainerService/aks/stable/2023-03-01/examples/AgentPoolsGet.json                                                                                                                                                                                                                                                                                                                                                |
| [agentPoolsGetUpgradeProfileSample.ts][agentpoolsgetupgradeprofilesample]                                                         | Gets the upgrade profile for an agent pool. x-ms-original-file: specification/containerservice/resource-manager/Microsoft.ContainerService/aks/stable/2023-03-01/examples/AgentPoolsGetUpgradeProfile.json                                                                                                                                                                                                                                                                                                                                     |
| [agentPoolsListSample.ts][agentpoolslistsample]                                                                                   | Gets a list of agent pools in the specified managed cluster. x-ms-original-file: specification/containerservice/resource-manager/Microsoft.ContainerService/aks/stable/2023-03-01/examples/AgentPoolsList.json                                                                                                                                                                                                                                                                                                                                 |
| [agentPoolsUpgradeNodeImageVersionSample.ts][agentpoolsupgradenodeimageversionsample]                                             | Upgrading the node image version of an agent pool applies the newest OS and runtime updates to the nodes. AKS provides one new image per week with the latest updates. For more details on node image versions, see: https://docs.microsoft.com/azure/aks/node-image-upgrade x-ms-original-file: specification/containerservice/resource-manager/Microsoft.ContainerService/aks/stable/2023-03-01/examples/AgentPoolsUpgradeNodeImageVersion.json                                                                                              |
| [maintenanceConfigurationsCreateOrUpdateSample.ts][maintenanceconfigurationscreateorupdatesample]                                 | Creates or updates a maintenance configuration in the specified managed cluster. x-ms-original-file: specification/containerservice/resource-manager/Microsoft.ContainerService/aks/stable/2023-03-01/examples/MaintenanceConfigurationsCreate_Update.json                                                                                                                                                                                                                                                                                     |
| [maintenanceConfigurationsDeleteSample.ts][maintenanceconfigurationsdeletesample]                                                 | Deletes a maintenance configuration. x-ms-original-file: specification/containerservice/resource-manager/Microsoft.ContainerService/aks/stable/2023-03-01/examples/MaintenanceConfigurationsDelete.json                                                                                                                                                                                                                                                                                                                                        |
| [maintenanceConfigurationsGetSample.ts][maintenanceconfigurationsgetsample]                                                       | Gets the specified maintenance configuration of a managed cluster. x-ms-original-file: specification/containerservice/resource-manager/Microsoft.ContainerService/aks/stable/2023-03-01/examples/MaintenanceConfigurationsGet.json                                                                                                                                                                                                                                                                                                             |
| [maintenanceConfigurationsListByManagedClusterSample.ts][maintenanceconfigurationslistbymanagedclustersample]                     | Gets a list of maintenance configurations in the specified managed cluster. x-ms-original-file: specification/containerservice/resource-manager/Microsoft.ContainerService/aks/stable/2023-03-01/examples/MaintenanceConfigurationsList.json                                                                                                                                                                                                                                                                                                   |
| [managedClustersAbortLatestOperationSample.ts][managedclustersabortlatestoperationsample]                                         | Aborts the currently running operation on the managed cluster. The Managed Cluster will be moved to a Canceling state and eventually to a Canceled state when cancellation finishes. If the operation completes before cancellation can take place, a 409 error code is returned. x-ms-original-file: specification/containerservice/resource-manager/Microsoft.ContainerService/aks/stable/2023-03-01/examples/ManagedClustersAbortOperation.json                                                                                             |
| [managedClustersCreateOrUpdateSample.ts][managedclusterscreateorupdatesample]                                                     | Creates or updates a managed cluster. x-ms-original-file: specification/containerservice/resource-manager/Microsoft.ContainerService/aks/stable/2023-03-01/examples/ManagedClustersCreate_Snapshot.json                                                                                                                                                                                                                                                                                                                                        |
| [managedClustersDeleteSample.ts][managedclustersdeletesample]                                                                     | Deletes a managed cluster. x-ms-original-file: specification/containerservice/resource-manager/Microsoft.ContainerService/aks/stable/2023-03-01/examples/ManagedClustersDelete.json                                                                                                                                                                                                                                                                                                                                                            |
| [managedClustersGetAccessProfileSample.ts][managedclustersgetaccessprofilesample]                                                 | **WARNING**: This API will be deprecated. Instead use [ListClusterUserCredentials](https://docs.microsoft.com/rest/api/aks/managedclusters/listclusterusercredentials) or [ListClusterAdminCredentials](https://docs.microsoft.com/rest/api/aks/managedclusters/listclusteradmincredentials) . x-ms-original-file: specification/containerservice/resource-manager/Microsoft.ContainerService/aks/stable/2023-03-01/examples/ManagedClustersGetAccessProfile.json                                                                              |
| [managedClustersGetCommandResultSample.ts][managedclustersgetcommandresultsample]                                                 | Gets the results of a command which has been run on the Managed Cluster. x-ms-original-file: specification/containerservice/resource-manager/Microsoft.ContainerService/aks/stable/2023-03-01/examples/RunCommandResultFailed.json                                                                                                                                                                                                                                                                                                             |
| [managedClustersGetOSOptionsSample.ts][managedclustersgetosoptionssample]                                                         | Gets supported OS options in the specified subscription. x-ms-original-file: specification/containerservice/resource-manager/Microsoft.ContainerService/aks/stable/2023-03-01/examples/ContainerServiceGetOSOptions.json                                                                                                                                                                                                                                                                                                                       |
| [managedClustersGetSample.ts][managedclustersgetsample]                                                                           | Gets a managed cluster. x-ms-original-file: specification/containerservice/resource-manager/Microsoft.ContainerService/aks/stable/2023-03-01/examples/ManagedClustersGet.json                                                                                                                                                                                                                                                                                                                                                                  |
| [managedClustersGetUpgradeProfileSample.ts][managedclustersgetupgradeprofilesample]                                               | Gets the upgrade profile of a managed cluster. x-ms-original-file: specification/containerservice/resource-manager/Microsoft.ContainerService/aks/stable/2023-03-01/examples/ManagedClustersGetUpgradeProfile.json                                                                                                                                                                                                                                                                                                                             |
| [managedClustersListByResourceGroupSample.ts][managedclusterslistbyresourcegroupsample]                                           | Lists managed clusters in the specified subscription and resource group. x-ms-original-file: specification/containerservice/resource-manager/Microsoft.ContainerService/aks/stable/2023-03-01/examples/ManagedClustersListByResourceGroup.json                                                                                                                                                                                                                                                                                                 |
| [managedClustersListClusterAdminCredentialsSample.ts][managedclusterslistclusteradmincredentialssample]                           | Lists the admin credentials of a managed cluster. x-ms-original-file: specification/containerservice/resource-manager/Microsoft.ContainerService/aks/stable/2023-03-01/examples/ManagedClustersListClusterAdminCredentials.json                                                                                                                                                                                                                                                                                                                |
| [managedClustersListClusterMonitoringUserCredentialsSample.ts][managedclusterslistclustermonitoringusercredentialssample]         | Lists the cluster monitoring user credentials of a managed cluster. x-ms-original-file: specification/containerservice/resource-manager/Microsoft.ContainerService/aks/stable/2023-03-01/examples/ManagedClustersListClusterMonitoringUserCredentials.json                                                                                                                                                                                                                                                                                     |
| [managedClustersListClusterUserCredentialsSample.ts][managedclusterslistclusterusercredentialssample]                             | Lists the user credentials of a managed cluster. x-ms-original-file: specification/containerservice/resource-manager/Microsoft.ContainerService/aks/stable/2023-03-01/examples/ManagedClustersListClusterUserCredentials.json                                                                                                                                                                                                                                                                                                                  |
| [managedClustersListKubernetesVersionsSample.ts][managedclusterslistkubernetesversionssample]                                     | Contains extra metadata on the version, including supported patch versions, capabilities, available upgrades, and details on preview status of the version x-ms-original-file: specification/containerservice/resource-manager/Microsoft.ContainerService/aks/stable/2023-03-01/examples/KubernetesVersions_List.json                                                                                                                                                                                                                          |
| [managedClustersListOutboundNetworkDependenciesEndpointsSample.ts][managedclusterslistoutboundnetworkdependenciesendpointssample] | Gets a list of egress endpoints (network endpoints of all outbound dependencies) in the specified managed cluster. The operation returns properties of each egress endpoint. x-ms-original-file: specification/containerservice/resource-manager/Microsoft.ContainerService/aks/stable/2023-03-01/examples/OutboundNetworkDependenciesEndpointsList.json                                                                                                                                                                                       |
| [managedClustersListSample.ts][managedclusterslistsample]                                                                         | Gets a list of managed clusters in the specified subscription. x-ms-original-file: specification/containerservice/resource-manager/Microsoft.ContainerService/aks/stable/2023-03-01/examples/ManagedClustersList.json                                                                                                                                                                                                                                                                                                                          |
| [managedClustersResetAadProfileSample.ts][managedclustersresetaadprofilesample]                                                   | **WARNING**: This API will be deprecated. Please see [AKS-managed Azure Active Directory integration](https://aka.ms/aks-managed-aad) to update your cluster with AKS-managed Azure AD. x-ms-original-file: specification/containerservice/resource-manager/Microsoft.ContainerService/aks/stable/2023-03-01/examples/ManagedClustersResetAADProfile.json                                                                                                                                                                                      |
| [managedClustersResetServicePrincipalProfileSample.ts][managedclustersresetserviceprincipalprofilesample]                         | This action cannot be performed on a cluster that is not using a service principal x-ms-original-file: specification/containerservice/resource-manager/Microsoft.ContainerService/aks/stable/2023-03-01/examples/ManagedClustersResetServicePrincipalProfile.json                                                                                                                                                                                                                                                                              |
| [managedClustersRotateClusterCertificatesSample.ts][managedclustersrotateclustercertificatessample]                               | See [Certificate rotation](https://docs.microsoft.com/azure/aks/certificate-rotation) for more details about rotating managed cluster certificates. x-ms-original-file: specification/containerservice/resource-manager/Microsoft.ContainerService/aks/stable/2023-03-01/examples/ManagedClustersRotateClusterCertificates.json                                                                                                                                                                                                                |
| [managedClustersRotateServiceAccountSigningKeysSample.ts][managedclustersrotateserviceaccountsigningkeyssample]                   | Rotates the service account signing keys of a managed cluster. x-ms-original-file: specification/containerservice/resource-manager/Microsoft.ContainerService/aks/stable/2023-03-01/examples/ManagedClustersRotateServiceAccountSigningKeys.json                                                                                                                                                                                                                                                                                               |
| [managedClustersRunCommandSample.ts][managedclustersruncommandsample]                                                             | AKS will create a pod to run the command. This is primarily useful for private clusters. For more information see [AKS Run Command](https://docs.microsoft.com/azure/aks/private-clusters#aks-run-command-preview). x-ms-original-file: specification/containerservice/resource-manager/Microsoft.ContainerService/aks/stable/2023-03-01/examples/RunCommandRequest.json                                                                                                                                                                       |
| [managedClustersStartSample.ts][managedclustersstartsample]                                                                       | See [starting a cluster](https://docs.microsoft.com/azure/aks/start-stop-cluster) for more details about starting a cluster. x-ms-original-file: specification/containerservice/resource-manager/Microsoft.ContainerService/aks/stable/2023-03-01/examples/ManagedClustersStart.json                                                                                                                                                                                                                                                           |
| [managedClustersStopSample.ts][managedclustersstopsample]                                                                         | This can only be performed on Azure Virtual Machine Scale set backed clusters. Stopping a cluster stops the control plane and agent nodes entirely, while maintaining all object and cluster state. A cluster does not accrue charges while it is stopped. See [stopping a cluster](https://docs.microsoft.com/azure/aks/start-stop-cluster) for more details about stopping a cluster. x-ms-original-file: specification/containerservice/resource-manager/Microsoft.ContainerService/aks/stable/2023-03-01/examples/ManagedClustersStop.json |
| [managedClustersUpdateTagsSample.ts][managedclustersupdatetagssample]                                                             | Updates tags on a managed cluster. x-ms-original-file: specification/containerservice/resource-manager/Microsoft.ContainerService/aks/stable/2023-03-01/examples/ManagedClustersUpdateTags.json                                                                                                                                                                                                                                                                                                                                                |
| [operationsListSample.ts][operationslistsample]                                                                                   | Gets a list of operations. x-ms-original-file: specification/containerservice/resource-manager/Microsoft.ContainerService/aks/stable/2023-03-01/examples/Operation_List.json                                                                                                                                                                                                                                                                                                                                                                   |
| [privateEndpointConnectionsDeleteSample.ts][privateendpointconnectionsdeletesample]                                               | Deletes a private endpoint connection. x-ms-original-file: specification/containerservice/resource-manager/Microsoft.ContainerService/aks/stable/2023-03-01/examples/PrivateEndpointConnectionsDelete.json                                                                                                                                                                                                                                                                                                                                     |
| [privateEndpointConnectionsGetSample.ts][privateendpointconnectionsgetsample]                                                     | To learn more about private clusters, see: https://docs.microsoft.com/azure/aks/private-clusters x-ms-original-file: specification/containerservice/resource-manager/Microsoft.ContainerService/aks/stable/2023-03-01/examples/PrivateEndpointConnectionsGet.json                                                                                                                                                                                                                                                                              |
| [privateEndpointConnectionsListSample.ts][privateendpointconnectionslistsample]                                                   | To learn more about private clusters, see: https://docs.microsoft.com/azure/aks/private-clusters x-ms-original-file: specification/containerservice/resource-manager/Microsoft.ContainerService/aks/stable/2023-03-01/examples/PrivateEndpointConnectionsList.json                                                                                                                                                                                                                                                                             |
| [privateEndpointConnectionsUpdateSample.ts][privateendpointconnectionsupdatesample]                                               | Updates a private endpoint connection. x-ms-original-file: specification/containerservice/resource-manager/Microsoft.ContainerService/aks/stable/2023-03-01/examples/PrivateEndpointConnectionsUpdate.json                                                                                                                                                                                                                                                                                                                                     |
| [privateLinkResourcesListSample.ts][privatelinkresourceslistsample]                                                               | To learn more about private clusters, see: https://docs.microsoft.com/azure/aks/private-clusters x-ms-original-file: specification/containerservice/resource-manager/Microsoft.ContainerService/aks/stable/2023-03-01/examples/PrivateLinkResourcesList.json                                                                                                                                                                                                                                                                                   |
| [resolvePrivateLinkServiceIdPostSample.ts][resolveprivatelinkserviceidpostsample]                                                 | Gets the private link service ID for the specified managed cluster. x-ms-original-file: specification/containerservice/resource-manager/Microsoft.ContainerService/aks/stable/2023-03-01/examples/ResolvePrivateLinkServiceId.json                                                                                                                                                                                                                                                                                                             |
| [snapshotsCreateOrUpdateSample.ts][snapshotscreateorupdatesample]                                                                 | Creates or updates a snapshot. x-ms-original-file: specification/containerservice/resource-manager/Microsoft.ContainerService/aks/stable/2023-03-01/examples/SnapshotsCreate.json                                                                                                                                                                                                                                                                                                                                                              |
| [snapshotsDeleteSample.ts][snapshotsdeletesample]                                                                                 | Deletes a snapshot. x-ms-original-file: specification/containerservice/resource-manager/Microsoft.ContainerService/aks/stable/2023-03-01/examples/SnapshotsDelete.json                                                                                                                                                                                                                                                                                                                                                                         |
| [snapshotsGetSample.ts][snapshotsgetsample]                                                                                       | Gets a snapshot. x-ms-original-file: specification/containerservice/resource-manager/Microsoft.ContainerService/aks/stable/2023-03-01/examples/SnapshotsGet.json                                                                                                                                                                                                                                                                                                                                                                               |
| [snapshotsListByResourceGroupSample.ts][snapshotslistbyresourcegroupsample]                                                       | Lists snapshots in the specified subscription and resource group. x-ms-original-file: specification/containerservice/resource-manager/Microsoft.ContainerService/aks/stable/2023-03-01/examples/SnapshotsListByResourceGroup.json                                                                                                                                                                                                                                                                                                              |
| [snapshotsListSample.ts][snapshotslistsample]                                                                                     | Gets a list of snapshots in the specified subscription. x-ms-original-file: specification/containerservice/resource-manager/Microsoft.ContainerService/aks/stable/2023-03-01/examples/SnapshotsList.json                                                                                                                                                                                                                                                                                                                                       |
| [snapshotsUpdateTagsSample.ts][snapshotsupdatetagssample]                                                                         | Updates tags on a snapshot. x-ms-original-file: specification/containerservice/resource-manager/Microsoft.ContainerService/aks/stable/2023-03-01/examples/SnapshotsUpdateTags.json                                                                                                                                                                                                                                                                                                                                                             |

## Prerequisites

The sample programs are compatible with [LTS versions of Node.js](https://github.com/nodejs/release#release-schedule).

Before running the samples in Node, they must be compiled to JavaScript using the TypeScript compiler. For more information on TypeScript, see the [TypeScript documentation][typescript]. Install the TypeScript compiler using:

```bash
npm install -g typescript
```

You need [an Azure subscription][freesub] to run these sample programs.

Samples retrieve credentials to access the service endpoint from environment variables. Alternatively, edit the source code to include the appropriate credentials. See each individual sample for details on which environment variables/credentials it requires to function.

Adapting the samples to run in the browser may require some additional consideration. For details, please see the [package README][package].

## Setup

To run the samples using the published version of the package:

1. Install the dependencies using `npm`:

```bash
npm install
```

2. Compile the samples:

```bash
npm run build
```

3. Edit the file `sample.env`, adding the correct credentials to access the Azure service and run the samples. Then rename the file from `sample.env` to just `.env`. The sample programs will read this file automatically.

4. Run whichever samples you like (note that some samples may require additional setup, see the table above):

```bash
node dist/agentPoolsAbortLatestOperationSample.js
```

Alternatively, run a single sample with the correct environment variables set (setting up the `.env` file is not required if you do this), for example (cross-platform):

```bash
npx cross-env CONTAINERSERVICE_SUBSCRIPTION_ID="<containerservice subscription id>" CONTAINERSERVICE_RESOURCE_GROUP="<containerservice resource group>" node dist/agentPoolsAbortLatestOperationSample.js
```

## Next Steps

Take a look at our [API Documentation][apiref] for more information about the APIs that are available in the clients.

[agentpoolsabortlatestoperationsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/containerservice/arm-containerservice/samples/v18/typescript/src/agentPoolsAbortLatestOperationSample.ts
[agentpoolscreateorupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/containerservice/arm-containerservice/samples/v18/typescript/src/agentPoolsCreateOrUpdateSample.ts
[agentpoolsdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/containerservice/arm-containerservice/samples/v18/typescript/src/agentPoolsDeleteSample.ts
[agentpoolsgetavailableagentpoolversionssample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/containerservice/arm-containerservice/samples/v18/typescript/src/agentPoolsGetAvailableAgentPoolVersionsSample.ts
[agentpoolsgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/containerservice/arm-containerservice/samples/v18/typescript/src/agentPoolsGetSample.ts
[agentpoolsgetupgradeprofilesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/containerservice/arm-containerservice/samples/v18/typescript/src/agentPoolsGetUpgradeProfileSample.ts
[agentpoolslistsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/containerservice/arm-containerservice/samples/v18/typescript/src/agentPoolsListSample.ts
[agentpoolsupgradenodeimageversionsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/containerservice/arm-containerservice/samples/v18/typescript/src/agentPoolsUpgradeNodeImageVersionSample.ts
[maintenanceconfigurationscreateorupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/containerservice/arm-containerservice/samples/v18/typescript/src/maintenanceConfigurationsCreateOrUpdateSample.ts
[maintenanceconfigurationsdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/containerservice/arm-containerservice/samples/v18/typescript/src/maintenanceConfigurationsDeleteSample.ts
[maintenanceconfigurationsgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/containerservice/arm-containerservice/samples/v18/typescript/src/maintenanceConfigurationsGetSample.ts
[maintenanceconfigurationslistbymanagedclustersample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/containerservice/arm-containerservice/samples/v18/typescript/src/maintenanceConfigurationsListByManagedClusterSample.ts
[managedclustersabortlatestoperationsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/containerservice/arm-containerservice/samples/v18/typescript/src/managedClustersAbortLatestOperationSample.ts
[managedclusterscreateorupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/containerservice/arm-containerservice/samples/v18/typescript/src/managedClustersCreateOrUpdateSample.ts
[managedclustersdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/containerservice/arm-containerservice/samples/v18/typescript/src/managedClustersDeleteSample.ts
[managedclustersgetaccessprofilesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/containerservice/arm-containerservice/samples/v18/typescript/src/managedClustersGetAccessProfileSample.ts
[managedclustersgetcommandresultsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/containerservice/arm-containerservice/samples/v18/typescript/src/managedClustersGetCommandResultSample.ts
[managedclustersgetosoptionssample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/containerservice/arm-containerservice/samples/v18/typescript/src/managedClustersGetOSOptionsSample.ts
[managedclustersgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/containerservice/arm-containerservice/samples/v18/typescript/src/managedClustersGetSample.ts
[managedclustersgetupgradeprofilesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/containerservice/arm-containerservice/samples/v18/typescript/src/managedClustersGetUpgradeProfileSample.ts
[managedclusterslistbyresourcegroupsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/containerservice/arm-containerservice/samples/v18/typescript/src/managedClustersListByResourceGroupSample.ts
[managedclusterslistclusteradmincredentialssample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/containerservice/arm-containerservice/samples/v18/typescript/src/managedClustersListClusterAdminCredentialsSample.ts
[managedclusterslistclustermonitoringusercredentialssample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/containerservice/arm-containerservice/samples/v18/typescript/src/managedClustersListClusterMonitoringUserCredentialsSample.ts
[managedclusterslistclusterusercredentialssample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/containerservice/arm-containerservice/samples/v18/typescript/src/managedClustersListClusterUserCredentialsSample.ts
[managedclusterslistkubernetesversionssample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/containerservice/arm-containerservice/samples/v18/typescript/src/managedClustersListKubernetesVersionsSample.ts
[managedclusterslistoutboundnetworkdependenciesendpointssample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/containerservice/arm-containerservice/samples/v18/typescript/src/managedClustersListOutboundNetworkDependenciesEndpointsSample.ts
[managedclusterslistsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/containerservice/arm-containerservice/samples/v18/typescript/src/managedClustersListSample.ts
[managedclustersresetaadprofilesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/containerservice/arm-containerservice/samples/v18/typescript/src/managedClustersResetAadProfileSample.ts
[managedclustersresetserviceprincipalprofilesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/containerservice/arm-containerservice/samples/v18/typescript/src/managedClustersResetServicePrincipalProfileSample.ts
[managedclustersrotateclustercertificatessample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/containerservice/arm-containerservice/samples/v18/typescript/src/managedClustersRotateClusterCertificatesSample.ts
[managedclustersrotateserviceaccountsigningkeyssample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/containerservice/arm-containerservice/samples/v18/typescript/src/managedClustersRotateServiceAccountSigningKeysSample.ts
[managedclustersruncommandsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/containerservice/arm-containerservice/samples/v18/typescript/src/managedClustersRunCommandSample.ts
[managedclustersstartsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/containerservice/arm-containerservice/samples/v18/typescript/src/managedClustersStartSample.ts
[managedclustersstopsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/containerservice/arm-containerservice/samples/v18/typescript/src/managedClustersStopSample.ts
[managedclustersupdatetagssample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/containerservice/arm-containerservice/samples/v18/typescript/src/managedClustersUpdateTagsSample.ts
[operationslistsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/containerservice/arm-containerservice/samples/v18/typescript/src/operationsListSample.ts
[privateendpointconnectionsdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/containerservice/arm-containerservice/samples/v18/typescript/src/privateEndpointConnectionsDeleteSample.ts
[privateendpointconnectionsgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/containerservice/arm-containerservice/samples/v18/typescript/src/privateEndpointConnectionsGetSample.ts
[privateendpointconnectionslistsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/containerservice/arm-containerservice/samples/v18/typescript/src/privateEndpointConnectionsListSample.ts
[privateendpointconnectionsupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/containerservice/arm-containerservice/samples/v18/typescript/src/privateEndpointConnectionsUpdateSample.ts
[privatelinkresourceslistsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/containerservice/arm-containerservice/samples/v18/typescript/src/privateLinkResourcesListSample.ts
[resolveprivatelinkserviceidpostsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/containerservice/arm-containerservice/samples/v18/typescript/src/resolvePrivateLinkServiceIdPostSample.ts
[snapshotscreateorupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/containerservice/arm-containerservice/samples/v18/typescript/src/snapshotsCreateOrUpdateSample.ts
[snapshotsdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/containerservice/arm-containerservice/samples/v18/typescript/src/snapshotsDeleteSample.ts
[snapshotsgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/containerservice/arm-containerservice/samples/v18/typescript/src/snapshotsGetSample.ts
[snapshotslistbyresourcegroupsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/containerservice/arm-containerservice/samples/v18/typescript/src/snapshotsListByResourceGroupSample.ts
[snapshotslistsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/containerservice/arm-containerservice/samples/v18/typescript/src/snapshotsListSample.ts
[snapshotsupdatetagssample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/containerservice/arm-containerservice/samples/v18/typescript/src/snapshotsUpdateTagsSample.ts
[apiref]: https://docs.microsoft.com/javascript/api/@azure/arm-containerservice?view=azure-node-preview
[freesub]: https://azure.microsoft.com/free/
[package]: https://github.com/Azure/azure-sdk-for-js/tree/main/sdk/containerservice/arm-containerservice/README.md
[typescript]: https://www.typescriptlang.org/docs/home.html
